--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>simpleverse-home</title>
+    <meta name="description" content="Simpleverse - Privacy-focused applications and developer tools. VaultNote password manager, Time Capsule, and more." />
+    <title>Simpleverse - Privacy-First Applications & Tools</title>
   </head>
   <body>
     <div id="root"></div>
